[gd_scene load_steps=4 format=2]

[ext_resource path="res://Important_Scenes/Reusable/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemy.gd" type="Script" id=2]
[ext_resource path="res://Important_Scenes/Reusable/Enemy_Stats.tscn" type="PackedScene" id=3]

[node name="Enemy" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="." index="4"]
avoidance_enabled = true

[node name="EnemyStats" parent="." index="5" instance=ExtResource( 3 )]

[connection signal="path_changed" from="NavigationAgent2D" to="." method="_on_NavigationAgent2D_path_changed"]
[connection signal="target_reached" from="NavigationAgent2D" to="." method="_on_NavigationAgent2D_target_reached"]
